--- a/notes.org
+++ b/notes.org
@@ -2060,12 +2060,6 @@ Type system: [[https://v5.chriskrycho.com/journal/things-i-was-wrong-about/1-typ
 [[https://www.cs.utexas.edu/~EWD/transcriptions/EWD03xx/EWD340.html][The Humble Programmer by Edsger W. Dijkstra]]
 
 Book: [[https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book-Z-H-4.html#%_toc_start][Structure and Interpretation of Computer Programs]]
-- [[https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book-Z-H-10.html][1.1  The Elements of Programming]]
-> *Primitive expressions*, which represent the simplest entities the language is concerned with,
->
-> *Means of combination*, by which compound elements are built from simpler ones, and
->
-> *means of abstraction*, by which compound elements can be named and manipulated as units
 
 [[https://www.youtube.com/watch?v=j-BVv0XW1H8][How to learn programming | Charles Isbell and Michael Littman and Lex Fridman]]
 
@@ -2172,6 +2166,16 @@ being able to work in the problem domain rather than at the low-level implementa
 - *Avoid creating god classes*. Avoid creating omniscient classes that are all-knowing and all-powerful. If a class spends its time retrieving data from other classes using Get() and Set() routines (that is, digging into their business and telling them what to do), ask whether that functionality might better be organized into those other classes rather than into the god class (Riel 1996).
 - *Eliminate irrelevant classes*. If a class consists only of data but no behavior, ask your- self whether it’s really a class and consider demoting it so that its member data just becomes attributes of one or more other classes.
 - *Avoid classes named after verbs*. A class that has only behavior but no data is gener- ally not really a class. Consider turning a class like DatabaseInitialization() or String- Builder() into a routine on some other class.
+
+
+*** Book: [[https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book-Z-H-4.html#%_toc_start][Structure and Interpretation of Computer Programs]]
+
+*[[https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book-Z-H-10.html][1.1  The Elements of Programming]]*
+
+- *Primitive expressions*, which represent the simplest entities the language is concerned with,
+- *Means of combination*, by which compound elements are built from simpler ones, and
+- *means of abstraction*, by which compound elements can be named and manipulated as units
+
 
 
 *** Videos: MIT 6.001 Structure and Interpretation, 1986
