--- a/notes.org
+++ b/notes.org
@@ -2176,14 +2176,20 @@ being able to work in the problem domain rather than at the low-level implementa
 - *Means of combination*, by which compound elements are built from simpler ones, and
 - *means of abstraction*, by which compound elements can be named and manipulated as units
 
+*1.1.8  Procedures as Black-Box Abstractions*
+- So a procedure definition should be able to suppress detail. The users of the procedure may not have written the procedure themselves, but may have obtained it from another programmer as a black box. A user should not need to know how the procedure is implemented in order to use it.
+
+*1.2  Procedures and the Processes They Generate*
+- A procedure is a pattern for the local evolution of a computational process. It specifies how each stage of the process is built upon the previous stage. We would like to be able to make statements about the overall, or global, behavior of a process whose local evolution has been specified by a procedure. This is very difficult to do in general, but we can at least try to describe some typical patterns of process evolution.
 
 *** Videos: MIT 6.001 Structure and Interpretation, 1986
+
+Coupled with the book: Structure and Interpretation of Computer Programs
 
 I like this lecture a lot:
 [[https://www.youtube.com/watch?v=PEwZL3H2oKg&list=PLE18841CABEA24090&index=5][Lecture 3A: Henderson Escher Example]]
 
-The blur line between procedure and data.
-
+blur the line between what's data and what's a procedure.
 
 
 ** Smart Contracts                        :blockchain:smartcontract:@reading:
