--- a/notes.org
+++ b/notes.org
@@ -1058,9 +1058,262 @@ alice after: 170141183460469231731687303715884105727
 test give_me::tests::transfer_works ... ok
 #+end_src 
 
+
 *** TBA on Dfinity
 
+**** Source code
+
+**** Hacklog
+
 Previous log is on [[https://gist.github.com/Aimeedeer/aae0d6759fb04bb30478cbf38d4d46ce][Gist]].
+
+For building TBA, I started with its example [[https://github.com/dfinity/examples/tree/master/motoko/echo][Echo]].
+The README.md seems to be out of date -- 
+it starts a node ~dfx start~ before creating a project,
+while the tutorials, [[https://sdk.dfinity.org/docs/quickstart/local-quickstart.html#start-the-local-network][Start the local network]], need you to start
+a node inside a project.
+
+I'll create a tba folder, and start the node:
+
+#+begin_src shell
+$ dfx new tba
+Fetching manifest https://sdk.dfinity.org/manifest.json
+⠁ Checking for latest dfx version...
+You seem to be running an outdated version of dfx.
+
+You are strongly encouraged to upgrade by running 'dfx upgrade'!
+Creating new project "tba"...
+CREATE       tba/src/tba_assets/assets/sample-asset.txt (24B)...
+CREATE       tba/src/tba/main.mo (107B)...
+CREATE       tba/dfx.json (454B)...
+CREATE       tba/.gitignore (165B)...
+⠤ Checking for latest dfx version...
+CREATE       tba/src/tba_assets/public/index.js (131B)...
+CREATE       tba/package.json (282B)...
+CREATE       tba/webpack.config.js (2.15KB)...
+⠉ Checking for latest dfx version...
+⠂ Installing node dependencies...
+⠴ Installing node dependencies...
+⠐ Checking for latest dfx version...
+⠈ Checking for latest dfx version...
+
+> fsevents@1.2.13 install /<my_path>/tba/node_modules/watchpack-chokidar2/node_modules/fsevents
+> node install.js
+⠦ Checking for latest dfx version...
+⠙ Installing node dependencies...
+⠤ Checking for latest dfx version...
+⠂ Installing node dependencies...
+npm WARN tba_assets@0.1.0 No repository field.
+npm WARN tba_assets@0.1.0 No license field.
+
+⠲ Installing node dependencies...
+
+13 packages are looking for funding
+  run `npm fund` for details
+
+found 1 high severity vulnerability
+  Done.
+⠐ Checking for latest dfx version...
+
+===============================================================================
+        Welcome to the internet computer developer community!
+                        You're using dfx 0.6.20
+
+            ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄                ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄       
+          ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄          ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄    
+        ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄      ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄  
+       ▄▄▄▄▄▄▄▄▄▄▀▀▀▀▀▄▄▄▄▄▄▄▄▄▄▄▄  ▄▄▄▄▄▄▄▄▄▄▄▄▀▀▀▀▀▀▄▄▄▄▄▄▄▄▄▄ 
+      ▄▄▄▄▄▄▄▄▀         ▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀         ▀▄▄▄▄▄▄▄▄▄
+     ▄▄▄▄▄▄▄▄▀            ▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀             ▄▄▄▄▄▄▄▄
+     ▄▄▄▄▄▄▄▄               ▀▄▄▄▄▄▄▄▄▄▄▄▄▀                ▄▄▄▄▄▄▄
+     ▄▄▄▄▄▄▄▄                ▄▄▄▄▄▄▄▄▄▄▄▄                 ▄▄▄▄▄▄▄
+     ▄▄▄▄▄▄▄▄               ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄              ▄▄▄▄▄▄▄▄
+      ▄▄▄▄▄▄▄▄           ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄          ▄▄▄▄▄▄▄▄▀
+      ▀▄▄▄▄▄▄▄▄▄▄     ▄▄▄▄▄▄▄▄▄▄▄▄▀ ▀▄▄▄▄▄▄▄▄▄▄▄▄    ▄▄▄▄▄▄▄▄▄▄▄ 
+       ▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀     ▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀  
+         ▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀         ▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄    
+           ▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀▀             ▀▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀      
+              ▀▀▀▀▀▀▀▀▀▀▀                    ▀▀▀▀▀▀▀▀▀▀▀         
+     
+
+
+To learn more before you start coding, see the documentation available online:
+
+- Quick Start: https://sdk.dfinity.org/docs/quickstart/quickstart-intro.html
+- SDK Developer Tools: https://sdk.dfinity.org/docs/developers-guide/sdk-guide.html
+- Motoko Language Guide: https://sdk.dfinity.org/docs/language-guide/motoko.html
+- Motoko Quick Reference: https://sdk.dfinity.org/docs/language-guide/language-manual.html
+
+If you want to work on programs right away, try the following commands to get started:
+
+    cd tba
+    dfx help
+    dfx new --help
+
+===============================================================================
+#+end_src
+
+By the way, I follow the suggestion to upgrade my ~dfx~, 
+and it seems it doesn't do anything useful:
+
+#+begin_src shell 
+$ dfx upgrade
+Current version: 0.6.20
+Fetching manifest https://sdk.dfinity.org/manifest.json
+Already up to date
+
+$ dfx --version
+dfx 0.6.20
+#+end_src
+
+I start another terminal window for the node:
+
+#+begin_src shell
+$ dfx start
+Jan 27 16:01:01.798 INFO ic-starter. Configuration: ValidatedConfig { replica_path: Some("/Users/aimeez/.cache/dfinity/versions/0.6.20/replica"), replica_version: "0.1.0", log_level: Warning, subnet_id: fscpm-uiaaa-aaaaa-aaaap-yai, cargo_bin: "cargo", cargo_opts: "", state_dir: "/<my_path>/tba/.dfx/state/replicated_state", http_listen_addr: V4(127.0.0.1:0), http_port_file: Some("/<my_path>/tba/.dfx/replica-configuration/replica-1.port"), metrics_addr: None, hypervisor_create_funds_whitelist: "*", artifact_pool_dir: "/<my_path>/tba/.dfx/state/replicated_state/node-100/ic_consensus_pool", crypto_root: "/<my_path>/tba/.dfx/state/replicated_state/node-100/crypto", state_manager_root: "/<my_path>/tba/.dfx/state/replicated_state/node-100/state", registry_file: "/<my_path>/tba/.dfx/state/replicated_state/registry.proto", bootstrap_registry: None, state_dir_holder: None }, Application: starter
+Jan 27 16:01:01.799 INFO Initialize replica configuration "/<my_path>/tba/.dfx/state/replicated_state/ic.json5", Application: starter
+Jan 27 16:01:01.816 INFO Executing "/Users/aimeez/.cache/dfinity/versions/0.6.20/replica" "--replica-version" "0.1.0" "--config-file" "/<my_path>/tba/.dfx/state/replicated_state/ic.json5", Application: starter
+Jan 27 16:01:06.664 ERRO s:fscpm-uiaaa-aaaaa-aaaap-yai/n:owpmo-ykels-vijqd-6ql2q-gklnb-6oii4-2zkce-54jdn-vt7ob-hrn7h-hae/ic_messaging/xnet_endpoint No XNet configuration for node owpmo-ykels-vijqd-6ql2q-gklnb-6oii4-2zkce-54jdn-vt7ob-hrn7h-hae. This is an error in production, but may be ignored in single-subnet test deployments.
+Jan 27 16:01:07.671 WARN s:fscpm-uiaaa-aaaaa-aaaap-yai/n:owpmo-ykels-vijqd-6ql2q-gklnb-6oii4-2zkce-54jdn-vt7ob-hrn7h-hae/ic_http_handler/ic_http_handler NNS subnet not found in network topology. Skipping fetching the delegation.
+Starting webserver on port 61644 for replica at "http://localhost:61644"
+binding to: V4(127.0.0.1:8000)
+replica(s): http://localhost:61644/
+#+end_src
+
+I go back to the first terminal window, and deploy (before ~build~ that I usually do):
+
+#+begin_src shell
+$ dfx deploy
+Deploying all canisters.
+Creating canisters...
+Creating canister "tba"...
+"tba" canister created with canister id: "rwlgt-iiaaa-aaaaa-aaaaa-cai"
+Creating canister "tba_assets"...
+"tba_assets" canister created with canister id: "rrkah-fqaaa-aaaaa-aaaaq-cai"
+Building canisters...
+Building frontend...
+The post-build step failed for canister 'rrkah-fqaaa-aaaaa-aaaaq-cai' with an embedded error: The command '"npm" "run" "build"' failed with exit status 'exit code: 1'.
+Stdout:
+
+> tba_assets@0.1.0 build /<my_path>/tba
+> webpack
+
+
+Stderr:
+/<my_path>/tba/node_modules/terser-webpack-plugin/dist/index.js:572
+      const hooks = compiler.webpack.javascript.JavascriptModulesPlugin.getCompilationHooks(compilation);
+                                     ^
+
+TypeError: Cannot read property 'javascript' of undefined
+    at compiler.hooks.compilation.tap.compilation (/<my_path>/tba/node_modules/terser-webpack-plugin/dist/index.js:572:38)
+    at SyncHook.eval [as call] (eval at create (/<my_path>/tba/node_modules/tapable/lib/HookCodeFactory.js:19:10), <anonymous>:85:1)
+    at SyncHook.lazyCompileHook (/<my_path>/tba/node_modules/tapable/lib/Hook.js:154:20)
+    at Compiler.newCompilation (/<my_path>/tba/node_modules/webpack/lib/Compiler.js:631:26)
+    at hooks.beforeCompile.callAsync.err (/<my_path>/tba/node_modules/webpack/lib/Compiler.js:667:29)
+    at AsyncSeriesHook.eval [as callAsync] (eval at create (/<my_path>/tba/node_modules/tapable/lib/HookCodeFactory.js:33:10), <anonymous>:6:1)
+    at AsyncSeriesHook.lazyCompileHook (/<my_path>/tba/node_modules/tapable/lib/Hook.js:154:20)
+    at Compiler.compile (/<my_path>/tba/node_modules/webpack/lib/Compiler.js:662:28)
+    at readRecords.err (/<my_path>/tba/node_modules/webpack/lib/Compiler.js:321:11)
+    at Compiler.readRecords (/<my_path>/tba/node_modules/webpack/lib/Compiler.js:529:11)
+    at hooks.run.callAsync.err (/<my_path>/tba/node_modules/webpack/lib/Compiler.js:318:10)
+    at AsyncSeriesHook.eval [as callAsync] (eval at create (/<my_path>/tba/node_modules/tapable/lib/HookCodeFactory.js:33:10), <anonymous>:6:1)
+    at AsyncSeriesHook.lazyCompileHook (/<my_path>/tba/node_modules/tapable/lib/Hook.js:154:20)
+    at hooks.beforeRun.callAsync.err (/<my_path>/tba/node_modules/webpack/lib/Compiler.js:315:19)
+    at AsyncSeriesHook.eval [as callAsync] (eval at create (/<my_path>/tba/node_modules/tapable/lib/HookCodeFactory.js:33:10), <anonymous>:15:1)
+    at AsyncSeriesHook.lazyCompileHook (/<my_path>/tba/node_modules/tapable/lib/Hook.js:154:20)
+    at Compiler.run (/<my_path>/tba/node_modules/webpack/lib/Compiler.js:312:24)
+    at runWithDependencies (/<my_path>/tba/node_modules/webpack/lib/MultiCompiler.js:265:15)
+    at asyncLib.map (/<my_path>/tba/node_modules/webpack/lib/MultiCompiler.js:185:6)
+    at arrayEachIndex (/<my_path>/tba/node_modules/neo-async/async.js:2548:9)
+    at Object.map (/<my_path>/tba/node_modules/neo-async/async.js:2900:9)
+    at runCompilers (/<my_path>/tba/node_modules/webpack/lib/MultiCompiler.js:182:13)
+    at MultiCompiler.runWithDependencies (/<my_path>/tba/node_modules/webpack/lib/MultiCompiler.js:194:3)
+    at MultiCompiler.run (/<my_path>/tba/node_modules/webpack/lib/MultiCompiler.js:261:9)
+    at processOptions (/<my_path>/tba/node_modules/webpack-cli/bin/cli.js:353:14)
+    at yargs.parse (/<my_path>/tba/node_modules/webpack-cli/bin/cli.js:364:3)
+    at Object.parse (/<my_path>/tba/node_modules/yargs/yargs.js:567:18)
+    at /<my_path>/tba/node_modules/webpack-cli/bin/cli.js:49:8
+    at Object.<anonymous> (/<my_path>/tba/node_modules/webpack-cli/bin/cli.js:366:3)
+    at Module._compile (internal/modules/cjs/loader.js:778:30)
+npm ERR! code ELIFECYCLE
+npm ERR! errno 1
+npm ERR! tba_assets@0.1.0 build: `webpack`
+npm ERR! Exit status 1
+npm ERR! 
+npm ERR! Failed at the tba_assets@0.1.0 build script.
+npm ERR! This is probably not a problem with npm. There is likely additional logging output above.
+#+end_src
+
+I don't know what to do with this error while checking back with 
+Dfinity's documentation. So I ~rm -rf tba~ and then
+use ~dfx new tba~ to re-create tba.
+Now it works:
+
+#+begin_src shell
+$ dfx deploy
+Deploying all canisters.
+Creating canisters...
+Creating canister "tba"...
+"tba" canister created with canister id: "rwlgt-iiaaa-aaaaa-aaaaa-cai"
+Creating canister "tba_assets"...
+"tba_assets" canister created with canister id: "rrkah-fqaaa-aaaaa-aaaaq-cai"
+Building canisters...
+Building frontend...
+Installing canisters...
+Installing code for canister tba, with canister_id rwlgt-iiaaa-aaaaa-aaaaa-cai
+Installing code for canister tba_assets, with canister_id rrkah-fqaaa-aaaaa-aaaaq-cai
+Deployed canisters.
+#+end_src
+
+Test it:
+
+#+begin_src shell
+$ dfx build
+Building canisters...
+Building frontend...
+
+$ dfx canister call tba greet me
+("Hello, me!")
+#+end_src
+
+My processes are:
+- Create new project with ~dfx new <your project>~
+- Go into the project folder ~cd <your project>~
+- Install npm with ~npm install~
+- Open another terminal window, go to the project folder, and run
+a local node with ~dfx start~
+- Go back to previous terminal window, and deploy my project: ~dfx deploy~.
+It seems that the deploy operation also builds the project before deploy it.
+
+
+
+
+
+
+
+
+
+
+
+Build:
+#+begin_src shell
+$ dfx build
+Cannot find canister id. Please issue 'dfx canister create tba_assets'.
+#+end_src
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 **** References
 
@@ -1089,7 +1342,17 @@ The values of ~stable~ variables are automatically preserved across software upg
 
 It's weird to use another name ~stable~ to replace a name that is in consensus ~static~.
 
+
+[[https://sdk.dfinity.org/docs/candid-spec/idl][Candid Specification]]
+
+It brings some design thoughts, especially the section [[https://sdk.dfinity.org/docs/candid-spec/idl#_services][Services]].
+An interesting read.
+
+[[https://docs.rs/candid/0.6.13/candid/][Crate candid]]
+
 Forum post: [[https://forum.dfinity.org/t/developer-experience-january-2021/1749][Developer Experience, January 2021]]
+
+
 
 
 
