update dfinity notes

--- a/notes.org
+++ b/notes.org
@@ -1063,6 +1063,8 @@ test give_me::tests::transfer_works ... ok
 
 **** Source code
 
+TODO
+
 **** Hacklog
 
 Previous log is on [[https://gist.github.com/Aimeedeer/aae0d6759fb04bb30478cbf38d4d46ce][Gist]].
