rust clone notes

--- a/notes.org
+++ b/notes.org
@@ -2756,6 +2756,10 @@ they're probably a good enough choice to get started.
 
 *** Copy and Clone in Rust
 
+[[https://doc.rust-lang.org/stable/book/ch04-01-what-is-ownership.html][What Is Ownership?]]
+
+[[https://doc.rust-lang.org/stable/book/appendix-03-derivable-traits.html?highlight=clone#clone-and-copy-for-duplicating-values][Clone and Copy for Duplicating Values]]
+
 [[https://doc.rust-lang.org/core/clone/index.html][Module core::clone]]
 
 > Differs from ~Copy~ in that ~Copy~ is implicit and extremely inexpensive, 
@@ -2763,6 +2767,8 @@ while ~Clone~ is always explicit and may or may not be expensive.
 In order to enforce these characteristics, Rust does not allow you to reimplement ~Copy~, 
 but you may reimplement ~Clone~ and run arbitrary code.
 
+Blog post:
+[[https://hashrust.com/blog/moves-copies-and-clones-in-rust/][Moves, copies and clones in Rust]]
 
 
 *** Rust discussion
